After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786268 - ac3parse: fix not-linked handling to not cause glitches when switching tracks
ac3parse: fix not-linked handling to not cause glitches when switching tracks
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other other
: Normal normal
: 1.12.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-14 07:35 UTC by Sky Juan
Modified: 2017-08-16 13:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] ac3parse: Fix chain function not handling not-linked from baseparse (1.05 KB, patch)
2017-08-14 07:35 UTC, Sky Juan
committed Details | Review

Description Sky Juan 2017-08-14 07:35:18 UTC
Created attachment 357538 [details] [review]
[PATCH] ac3parse: Fix chain function not handling not-linked from baseparse

When an input data is separated into 2 buffers, the second buffer would not be pushed into adapter if baseparse returns not-linked for first buffer.
Comment 1 Marcin Kolny (IRC: loganek) 2017-08-15 08:55:52 UTC
Reassigning to GStreamer team
Comment 2 Tim-Philipp Müller 2017-08-15 09:32:14 UTC
Thanks for the patch. Makes sense, I think.

But what does it actually fix?

Does it fix glitches when switching between multiple audio tracks?
Comment 3 Sky Juan 2017-08-15 14:41:37 UTC
Yes. I hear glitches when switching track to ac3.
Comment 4 Tim-Philipp Müller 2017-08-16 13:14:06 UTC
Thanks!

commit bc290059a4d1fd2fb1ffa229ed307efc2daa3972 (HEAD -> master, origin/master, origin/HEAD)
Author: Sky Juan <skyjuan@realtek.com>
Date:   Mon Aug 14 15:28:22 2017 +0800

    ac3parse: fix not-linked handling causing glitches when selecting stream
    
    Fix chain function not handling not-linked from baseparse.
    
    When an input data is separated into 2 buffers, the second buffer
    would not be pushed into the adapter if baseparse returns not-linked
    for first buffer.
    
    This caused glitches when switching streams and selecting
    a stream that was previously unselected.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=786268